2002-06-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS) [darwin]: add `--traditional-cpp'

2002-06-11  Sam Steingold  <sds@gnu.org>

	* spvw_ctype.d (init_ctype) [UNIX_DARWIN]: no LC_MESSAGES,
	just like on WIN32_NATIVE

2002-06-10  Sam Steingold  <sds@gnu.org>

	* charstrg.d (string_gleich): use string_eqcomp()
	(string_equal): use string_eqcomp_ci()

2002-06-10  Sam Steingold  <sds@gnu.org>

	make string element access slightly easier: use schar()
	* lispbibl.d (schar): define
	* charstrg.d (schar) [HAVE_SMALL_SSTRING]: implement
	(coerce_char, CHAR, SCHAR): use schar()
	* array.d (storagevector_aref): use schar()
	* debug.d (read_form): ditto
	* io.d (sstring_printf): ditto
	* pathname.d (schar): removed
	(parse_logical_word, parse_logical_host_prefix, parse_logical_pathnamestring)
	(parse_logical_host_prefix, wildcard_diff_ab, translate_nametype_aux)
	(ensure_last_slash): use direct `==' instead of chareq(as_chart)
	* stream.d (read_char_array, rd_ch_str_in, wr_ch_array_pphelp)
	(rd_ch_buff_in): use schar()

2002-06-10  Sam Steingold  <sds@gnu.org>

	* pathname.d (common_case, test_optional_host, all_digits)
	(split_name_type, legal_logical_word, legal_type, wild_p)
	(word_wild_p, Z_AT_SLASH): adjusted for the new SIMPLE-STRING
	model by using SstringDispatch (for the 2002-05-26 UCS-4 patch)
	(schar, copy_upcase): new functions
	(parse_logical_word, translate_nametype_aux, PARSE-NAMESTRING)
	(parse_logical_host_prefix, parse_logical_pathnamestring)
	(wildcard_diff_ab): use them

2002-06-10  Sam Steingold  <sds@gnu.org>

	* makemake.in: when running CLISP, pass "-E UTF-8" instead of
	"-Efile UTF-8" for the sake of "make check" on badly localized
	machines (ascii terminals make UNICODE warnings into errors)

2002-06-10  Sam Steingold  <sds@gnu.org>

	user can now control the exit code better
	* lispbibl.d, spvw.d (final_exitcode): int, not bool (spvw.d
	and win32aux.d already assign it non-bool values)